The greater BasinRecipe split - add type parameter to BasinCategory (JEI) - move basin recipe type definition to BasinRecipe